implement `PUT /api/customers/<customer_id>/purchases/<purchase_id>` (#43)
